# sif

./: Cargo.toml  README.md  justfile
.github/: dependabot.yml
expand/: Cargo.toml  expand.sh
expand/src/: main.rs
sif_demo/: Cargo.toml
sif_demo/src/: lib.rs
sif_demo_mini/: Cargo.toml
sif_demo_mini/src/: lib.rs
sif_macro/: Cargo.toml
sif_macro/examples/: usage.rs
sif_macro/src/: case_parser.rs  lib.rs
sif_macro/tests/: cases.rs  trybuild.rs  trycompile.rs
sif_macro/tests/fail/: inequal_amount_of_arg.rs  inequal_amount_of_arg.stderr  not_a_fn.rs  on_visibility.rs  on_visibility.stderr  on_visibility_cfg_test.rs  on_visibility_cfg_test.stderr  rename_duplicate_name.rs  rename_without_followup_case_1.rs  rename_without_followup_case_1.stderr  rename_without_followup_case_2.rs  rename_without_followup_case_2.stderr  rename_without_followup_case_3.rs  rename_without_followup_case_3.stderr
sif_macro/tests/ok/: comment_in_test_case.rs  enum_arg.rs  enum_with_variant_value_arg.rs  import.rs  import_rename.rs  many_arg.rs  multiline.rs  multiple_ids.rs  negative_number_arg.rs  option_arg.rs  result_arg.rs  trailing_comma1.rs  trailing_comma2.rs  transitive_attr.rs  visibility_1.rs  visibility_2.rs
src/: lib.rs
trycompile/: Cargo.toml
trycompile/minimalcrate/: Cargo.toml
trycompile/src/: lib.rs
