[package]
name = "trycompile"
description = "Prototype for a test library for macro's"
version = "0.1.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = { version = "0.6.0" }
tempfile = "3.1.0"
toml = "0.5.6"